--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Agency FB Thin';
-  src: local('Agency FB'), url(../fonts/AgencyFB-Bold.ttf) format('truetype');
+  src: local('Agency FB'), url(../../fonts/AgencyFB-Bold.ttf) format('truetype');
 }
 
 h1 {
@@ -16,7 +16,7 @@ h2, h3 {
 }
 
 h2 {
-  font-size: clamp(3rem, 0.8824rem + 5.8824vw, 5rem);
+  font-size: clamp(2.8rem, 0.4706rem + 6.4706vw, 5rem);
   margin-bottom: 0;
 }
 
