--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,6 +7,7 @@
   &__sections, &__projects, &__contacts {
     font-size: 0.8rem;
     display: flex;
+    flex-flow: row wrap;
     gap: 20px;
     justify-content: center;
     align-items: center;
